made individual DAG for each pipeline task to run mannually for debugging

--- a/airflow.cfg
+++ b/airflow.cfg
@@ -1,5 +1,5 @@
 [core]
-dags_folder = /opt/airflow/airflow/dags
+dags_folder = /opt/airflow/dags
 hostname_callable = airflow.utils.net.getfqdn
 might_contain_dag_callable = airflow.utils.file.might_contain_dag_via_default_heuristic
 default_timezone = utc
@@ -178,7 +178,7 @@ web_server_worker_timeout = 120
 worker_refresh_batch_size = 1
 worker_refresh_interval = 6000
 reload_on_plugin_change = False
-secret_key = EDhMCBQU1M2TBe0rQmvrmQ==
+secret_key = o44TMTHT75szLKB6FFCZ9w==
 workers = 4
 worker_class = sync
 access_logfile = -
